src/objects/Recommendation__c.object
<CustomObject>
    <description>This is object is child object to Lead. The records will have different categories to (CPU/Cache/Controller) types when a customer hits the limit.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recommendations</relationshipLabel>
        <relationshipName>Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Array_Model__c</fullName>
        <label>Array Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Array_Used__c</fullName>
        <label>Array Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Asset_City__c</fullName>
        <label>Asset City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Asset_Country__c</fullName>
        <label>Asset Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Asset_SN__c</fullName>
        <label>Asset SN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_State__c</fullName>
        <label>Asset State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Asset_Street__c</fullName>
        <label>Asset Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Asset_Version__c</fullName>
        <label>Asset Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Zip__c</fullName>
        <label>Asset Zip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Recommendations</relationshipLabel>
        <relationshipName>Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bucket__c</fullName>
        <inlineHelpText>This field gives a qualitative binning of the severity of the need (i.e. if the recorded need is just &gt;80% but &lt;90% of current, if the need is &gt;90% but less than 100% of current, or if the need is &gt;100% of the current CPU or Cache available to the system)</inlineHelpText>
        <label>Bucket</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPU_Usage__c</fullName>
        <label>CPU Usage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cache_Usage__c</fullName>
        <label>Cache Usage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Model__c</fullName>
        <inlineHelpText>In the case of a “CPU Upgrade” recommendation, this field reports the system’s current controller type. In the case of a “Cache Upgrade” recommendation, this field reports the system’s current amount of raw SSD (in GB).</inlineHelpText>
        <label>Current Model</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Added_Date_Time__c</fullName>
        <formula>Lead__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This indicates when the recommendation generated by Infosight was used by salesforce to generate a lead.</inlineHelpText>
        <label>Lead Added Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <description>This is the Lead Status for this recommendation</description>
        <formula>TEXT(Lead__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Lead Status for this recommendation</inlineHelpText>
        <label>Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Infosight Upgrade Recommendations</relationshipLabel>
        <relationshipName>Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Usage__c</fullName>
        <label>Max Usage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Recommended_Weeks__c</fullName>
        <label>Number of Recommended Weeks</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation_Date_Time_Identified__c</fullName>
        <inlineHelpText>This indicates the time at which the recommendation was identified by our daily automation. The array will have fulfilled the lead generation criteria at this time (but will not necessarily have to fulfill this criteria at any later date).</inlineHelpText>
        <label>Recommendation Date Time Identified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Recommendation_Text__c</fullName>
        <inlineHelpText>This field gives a textual description of the recommendation.</inlineHelpText>
        <label>Recommendation Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommended_Model__c</fullName>
        <inlineHelpText>In the case of a “CPU Upgrade” recommendation, this field reports the system’s recommended controller type. In the case of a “Cache Upgrade” recommendation, this field reports the system’s recommended amount of raw SSD (in GB).</inlineHelpText>
        <label>Recommended Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SE Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recommendations</relationshipLabel>
        <relationshipName>Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Samples__c</fullName>
        <label>Samples</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowLineAt__c</fullName>
        <label>ShowLineAt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The recommendation status is either “Active” or “Inactive”. All recommendations are generated in the active state and are only moved into the inactive state manually.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Member_Role__c</fullName>
        <label>Team Member Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trips__c</fullName>
        <label>Trips</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>The recommendation type is either “CPU Upgrade” or “Cache Upgrade”. Arrays that need a controller upgrade will have a recommendation of the “CPU Upgrade” type while arrays that need more SSD will a recommendation of the “Cache Upgrade” type.</inlineHelpText>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_Percent__c</fullName>
        <label>Usage Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Recommendation</label>
    <listViews>
        <fullName>Active_Recommendations</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Lead__c</columns>
        <columns>Accounts__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Asset__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Type__c</columns>
        <columns>Recommendation_Text__c</columns>
        <columns>Array_Used__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Recommendations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Array_Model__c</columns>
        <columns>Array_Used__c</columns>
        <columns>Asset_SN__c</columns>
        <columns>Bucket__c</columns>
        <columns>Cache_Usage__c</columns>
        <columns>CPU_Usage__c</columns>
        <columns>Current_Model__c</columns>
        <columns>Lead__c</columns>
        <columns>Max_Usage__c</columns>
        <columns>Recommended_Model__c</columns>
        <columns>Status__c</columns>
        <columns>Usage_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Recommendation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>